--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaegyeong's First Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta name="viewport"
+  content="width=device-width, initial-scale=1.0">
+  <title>Chaegyeong Jung</title>
+  <meta charset="utf-8">
+<link rel="stylesheet" href="project.css">
 </head>
 <body>
-Hello, world! I am Chaegyeong Jung. I am learning how to create websites.
+  <header>
+    <h1><a href="index.html">CHAEGYEONG JUNG</a></h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">HOME</a></li> 
+      <li><a href="portfolio.html">PORTFOLIO</a></li>
+      <li><a href="aboutme.html">ABOUT ME</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
+    </ul>
+  </nav>
+  </header>
+  <div class="hero" id="homehero">
+    <h1 class="herotitle">CHAEGYEONG JUNG</h1>
+  </div>
+  <main>
+  </main>
+  <footer>
+      Copyright &copy; 2026 Chaegyeong Jung<br>
+      <a href="mailto:chaegyeongjung@gmail.com">chaegyeongjung@gmail.com</a>
+  </footer>
 </body>
 </html>
